Fixed IE bug : My Feedback page scrollbar no longer overlays on notes pop-out scrollbar

--- a/src/main/resources/static/components/shared/shared.css
+++ b/src/main/resources/static/components/shared/shared.css
@@ -1,5 +1,6 @@
 body {
 	height: 100vh;
+	-ms-overflow-style: scrollbar;
 }
 
 textarea {
